--- a/app/styles/mobile/grade-produto.css
+++ b/app/styles/mobile/grade-produto.css
@@ -12,6 +12,7 @@
     display: block;
     padding-right: 10px;
     padding-left: 10px;
+    overflow-y: hidden;
     /*float: left;*/
 }
 
